--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,9 @@
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.525.0",
+    "motion": "^12.23.1",
     "next": "15.3.4",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
