--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "emoji-picker-react": "^4.12.3",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.525.0",
