--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "ES2022",
-    "module": "es2022",
+    "module": "CommonJS",
     "outDir": "dist",
     "rootDir": ".",
     "esModuleInterop": true,
